# krw_util

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
kalloc_gen/: kalloc_gen.h
krw_op/: CMakeLists.txt  main.cpp
krw_util/: CMakeLists.txt  README.md  kBaseRoll.cpp  k_share.h  krw_kern_types.h  krw_kernblock.cpp  krw_notsimple.cpp  krw_ptr.h  krw_util.cpp  krw_util.h  physmem.h  unix_dkrw.cpp
